fixed opacity issue using z-index

--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -128,6 +128,7 @@ em {
 nav, footer {
     background-color: #ccc6c2;
     padding: 0.5rem 0 0.5rem 0;
+    z-index: 999;
 }
 
 nav li {
